...
  "yes": "Yes",
  "no": "No ",
  "home": "Home",
  "learn": "Learn",
  "editor": "Editor",
  "account": "Account",
  "ok": "OK",
  "for_everyone": "For everyone",
  "for_experts": "For experts",
  "one_hour_less": "1 hour or less",
  "one_two_hours": "1-2 hours",
  "two_three_hours": "2-3 hours",
  "three_hours_more": "3 hours or more",
...
  "chapters": "chapters",
  "sections": "sections",
  "view_statistics": "View statistics",
  "dismiss": "Dismiss",
  "published": "Published",
  "enrollings": "Enrollings",
  "completed": "Completed",
  "learn_page_header_1": "These are the courses you are enrolled in.",
  "learn_page_header_2": "These are the courses you completed.",
  "learn_page_no_in_progress_courses": "You are not enrolled in any courses. Start learning now!",
  "learn_page_no_completed_courses": "You have no completed courses.",
  "editor_page_no_published_courses": "You have published no course for the community yet. Go create one now and publish it!",
  "delete": "Delete",
...
  "statistics": "Statistics",
  "users_enrolled": " users enrolled in this course",
  "users_completed": " users completed this course",
  "course_dismiss_confirmation": "By confirming, this course will be removed from the bloQo community. This means that everyone who enrolled in this course will no more be able to access its content, and no one will be able to enroll in this course until you publish it again. Do you wish to continue?",
  "published_courses_by_author": "Courses created by ",
  "your_answer": "Your answer",
  "correct": "Correct!",
  "correct_answer": "The correct answer is: ",
  "wrong": "Wrong...",
  "confirm": "Confirm",
  "learned": "Learned!",
  "learned_all": "You learned everything!",
  "get_qr_code": "Get QR Code",
  "notifications": "Notifications",
  "no_notifications": "There are no notifications to show.",
  "no_users": "There are no users to show.",
  "has_requested_access": "has requested access to the following course:",
...
  "accept": "Accept",
  "deny": "Deny",
  "accept_enrollment_confirmation": "Are you sure you want to allow the access to your course?",
  "deny_enrollment_confirmation": "Are you sure you want to deny the access to your course?",
  "request_access": "Request Access",
  "already_requested_access_error": "You have already requested access to this course, and the course author has to review it. Please wait and try again.",
  "rate": "Rate",
  "rated": "Rated",
  "your_review": "Your review",
  "review": "Review",
  "review_headliner_to_rate": "What do you think of this course?",
  "review_headliner_rated": "Here is your review!",
  "review_title": "Review title",
  "title": "Title",
  "okay": "Okay!",
  "follow": "Follow",
  "unfollow": "Unfollow",
  "users_who_follow": "Users who follow ",
  "users_who_are_followed_by": "Users who are followed by ",
  "get_certificate": "Get certificate",
  "course_completion_certificate": "Course Completion Certificate",
  "assigned_to": "assigned to:",
  "for_successfully_completing_course": "for successfully completing the following course:",
  "date": "Date"
}
